Firefox web-plugin starts , but with lots of freeze and hangs (very unstable)
Please more consider Vlc 64-bit version for next final vlc version release.
Edited
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
Guys , This bug is very annoying , and is a blocker ,
first i (and also jb) had thought it only happens in 64 bit , and JB , change the priority from blocker to normal (in comment 2) but since funman had confirmed , it's not on;y 64 bit os issue , so this ticket (bug) could be set back as a blocker with high priority , isn't it?
mmdevice: do not enter the COM MTA upon unloading (fixes [#6830](https://code.videolan.org/videolan/vlc/-/issues/6830))(The MTA is still entered upon loading. In that case, it fails safe.)