mmdevice: do not enter the COM MTA upon unloading (fixes #6830)

(The MTA is still entered upon loading. In that case, it fails safe.)